--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>Clarity Seed App</title>
+    <title>Flickr Recent Photos</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
 </head>
+
 <body>
-<my-app>Loading...</my-app>
+    <my-app>
+        <div style="position: absolute;top: 50%; left: 50%; transform: translate(-50%, -50%);">
+            <div class="spinner"></div>
+        </div>
+    </my-app>
 </body>
+
 </html>
